[CheckableButton, ResourceList] fix checkbox alignment  (#9453)
<!--
  ☝️How to write a good PR title:
- Prefix it with [ComponentName] (if applicable), for example: [Button]
  - Start with a verb, for example: Add, Delete, Improve, Fix…
  - Give as much context as necessary and as little as possible
  - Prefix it with [WIP] while it’s a work in progress
-->

### WHY are these changes introduced?

Fixes https://github.com/Shopify/polaris-summer-editions/issues/441

<!--
  Context about the problem that’s being addressed.
-->

### WHAT is this pull request doing?

Before: 


https://github.com/Shopify/polaris/assets/12119389/d321464a-e98c-4e4d-91ed-72127f1f8f24


After:


https://github.com/Shopify/polaris/assets/12119389/e42cb80f-b025-453e-8a33-24804e4d47a4


### How to 🎩

🖥 [Local development
instructions](https://github.com/Shopify/polaris/blob/main/README.md#local-development)
🗒 [General tophatting
guidelines](https://github.com/Shopify/polaris/blob/main/documentation/Tophatting.md)
📄 [Changelog
guidelines](https://github.com/Shopify/polaris/blob/main/.github/CONTRIBUTING.md#changelog)

<!--
  Give as much information as needed to experiment with the component
  in the playground.
-->

<details>
<summary>Copy-paste this code in
<code>playground/Playground.tsx</code>:</summary>

```jsx
import React from 'react';
import {Page} from '../src';

export function Playground() {
  return (
    <Page title="Playground">
      {/* Add the code you want to test in here */}
    </Page>
  );
}
```

</details>

### 🎩 checklist

- [ ] Tested on
[mobile](https://github.com/Shopify/polaris/blob/main/documentation/Tophatting.md#cross-browser-testing)
- [ ] Tested on [multiple
browsers](https://help.shopify.com/en/manual/shopify-admin/supported-browsers)
- [ ] Tested for
[accessibility](https://github.com/Shopify/polaris/blob/main/documentation/Accessibility%20testing.md)
- [ ] Updated the component's `README.md

--- a/polaris-react/src/components/ResourceList/ResourceList.scss
+++ b/polaris-react/src/components/ResourceList/ResourceList.scss
@@ -85,7 +85,14 @@ $item-wrapper-loading-height: 64px;
   border-radius: var(--p-border-radius-2);
   #{$se23} & {
     min-height: 48px;
-    padding: var(--p-space-3);
+    align-items: center;
+    // This container conditionally includes a Select component for sorting
+    // We need dynamic padding values here to ensure the Select component and its container
+    // have adequate top and bottom spacing at each breakpoint.
+    padding: var(--p-space-1_5-experimental) var(--p-space-3);
+    @media #{$p-breakpoints-md-up} {
+      padding: var(--p-space-2) var(--p-space-3);
+    }
   }
 }
 
@@ -107,8 +114,10 @@ $item-wrapper-loading-height: 64px;
   #{$se23} & {
     right: var(--p-space-3);
     left: var(--p-space-3);
-    top: var(--p-space-2);
-    min-height: 28px;
+    // Regardless of the variable height of the content
+    // we just want it to be center aligned.
+    top: 0;
+    bottom: 0;
     align-items: center;
   }
 
@@ -207,9 +216,22 @@ $item-wrapper-loading-height: 64px;
   z-index: resource-list(bulk-actions-wrapper-stacking-order);
   width: 100%;
 
+  // se23: This is the initial value of flex, is there something else that mutates this in other components?
   @media #{$p-breakpoints-sm-up} {
     flex: 0 1 auto;
     align-self: flex-start;
+  }
+
+  #{$se23} & {
+    /*
+      We do not want to worry about setting the height and width explicitly.
+      We want to inherits the height and width of its child (in this case the SelectAllActions component).
+
+      We do this using flexbox because "the cross size of each flex container is the minimum size necessary to contain the flex items" as per the spec.
+      https://www.w3.org/TR/css-flexbox-1/#flex-lines
+    */
+    display: flex;
+    align-self: auto;
   }
 }
 
